<resources>
    <string name="app_name">FountainPenCollection</string>
    <string name="text_username">Username</string>
    <string name="text_Password">Password</string>
    <string name="buttion_login">LOGIN</string>
    <string name="loginFail">Sorry your credentials are incorrect please try again.</string>

    <string name="AccountSTextView">Account settings</string>
    <string name="AppStTextView">App setting</string>
    <string name="FavorteLOPTextView">Favorite pens</string>
    <string name="SortingTextView">Sorting</string>
    <string name="ClearSort">Sort Clear</string>
    <string name="ViewPenButton">View Pen</string>

    <string name="PenSortButtion">Pen Name</string>
    <string name="CompanySortButtion">Company Name</string>
    <string name="YearSortButtion">Year</string>
    <string name="RatingSortButtion">Rating</string>
    <string name="SortbyTextView">Sort by</string>
    <string name="PenNameDTextView">Pen Name</string>
    <string name="NewPassord">New Password</string>
    <string name="FountainPenCollectionTitle">The Fountain Pen Collection App</string>
    <string name="FontSizeChangeTextView">Font Change</string>
    <string name="EnterButton">Enter</string>
    <string name="ThemChange">Theme change</string>
</resources>